--- a/extendedsearchbar/src/main/res/drawable/round_t_white_16.xml
+++ b/extendedsearchbar/src/main/res/drawable/round_t_white_16.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/transparency_white_16"/>
+    <solid android:color="@color/white_16"/>
     <corners android:radius="8dp"/>
 </shape>
